API-3632: upgraded to bootstrap-play-25 with MDC logs. Removed the call to service locator.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,29 @@ appName = api-stop-autodeploy-test
 
 appUrl = "http://localhost:8901"
 
+include "backend.conf"
+
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
+
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform backend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
@@ -42,12 +65,6 @@ application.session.secure = false
 # ~~~~~
 application.langs = "en"
 
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-application.global = uk.gov.hmrc.config.MicroserviceGlobal
-
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
@@ -59,11 +76,6 @@ application.global = uk.gov.hmrc.config.MicroserviceGlobal
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router = prod.Routes
-
-# Play modules
-# ~~~~~
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
-play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
 
 # Controller
 # ~~~~~
