--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,22 @@
+.*
+!.gitignore
 
 logs
 project/project
 project/target
+project/metals.sbt
 target
 lib_managed
 tmp
-.history
 dist
-/.idea
 /*.iml
 /*.ipr
 /out
-/.idea_modules
-/.classpath
-/.project
 /RUNNING_PID
-/.settings
 *.iws
 node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-.DS_Store
 **/*.DS_Store
     
