--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,5 +1,4 @@
 rules = [
-  DisableSyntax
   OrganizeImports
 ]
 
@@ -16,24 +15,11 @@ OrganizeImports {
     "---"
     "play"
     "uk.gov.hmrc."
+    "---"
+    "uk.gov.hmrc.apistopautodeploytest."
   ]
   importSelectorsOrder = Ascii
   importsOrder = Ascii
   preset = DEFAULT
   removeUnused = true
 }
-
-DisableSyntax.noVars = true
-DisableSyntax.noThrows = false
-DisableSyntax.noNulls = true
-DisableSyntax.noReturns = true
-DisableSyntax.noWhileLoops = true
-DisableSyntax.noAsInstanceOf = true
-DisableSyntax.noIsInstanceOf = true
-DisableSyntax.noXml = true
-DisableSyntax.noDefaultArgs = false
-DisableSyntax.noFinalVal = true
-DisableSyntax.noFinalize = false
-DisableSyntax.noValPatterns = true
-DisableSyntax.noUniversalEquality = false
-DisableSyntax.noUniversalEqualityMessage = "== and != are unsafe since they allow comparing two unrelated types"
