--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -4,33 +4,8 @@ info:
   version: 1.0.0
   title: Stop AutoDeploy API
   description: |
-    # Overview
-    This API includes resources for testing access to the three different access levels
-  
-    Stop Auto Deploy API to test the checking and approving process
-  
-    New Version for Testing Stop Auto Deploy version
-    
-    Further details of the different access levels are given on 
-    the [Authorisation](/api-documentation/docs/authorisation) page.
+    Dummy API for testing the stop auto-deploy functionality in the API Platform
 
-    For more information about how to develop your own client applications, including example clients
-    for this API, see [Tutorials](/api-documentation/docs/tutorials).
-
-    # Versioning
-    When an API changes in a way that is backwards-incompatible, we increase the version number of the API. 
-    See our [reference guide](/api-documentation/docs/reference-guide#versioning) for more on versioning.
-
-    # Errors
-    We use standard HTTP status codes to show whether an API request succeeded or not. They are usually in the range:
-
-    - 200 to 299 if it succeeded, including code 202 if it was accepted by an API that needs to wait for further action
-    - 400 to 499 if it failed because of a client error by your application
-    - 500 to 599 if it failed because of an error on our server
-    
-    Errors specific to each API are shown in the Endpoints section, under Response. See our 
-    [reference guide](/api-documentation/docs/reference-guide#errors) for more on errors.
-  
 servers:
 - url: https://test-api.service.hmrc.gov.uk
   description: Sandbox
